<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="5dp">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F2f2f2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:background="@drawable/design"
                    android:layout_weight="1">

                <TextView
                    android:id="@+id/timerValue1"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:text="@string/timerVal"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:layout_weight="2" />


               <Button
                    android:id="@+id/startButton1"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                   android:background="@drawable/start1"
                    android:text="Start Code"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                   android:layout_marginTop="2dp"
                    android:textSize="18sp"
                   android:textStyle="bold"
                   android:gravity="center|center_vertical|center_horizontal"
                   android:layout_marginBottom="2dp"
                   android:layout_marginRight="2dp"
                   android:layout_weight="1.80"
                   android:paddingRight="5dp"
                   android:typeface="serif"
                   android:textAllCaps="false"
                   android:textColor="#f2f2f2" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:background="@mipmap/logo"
                        android:layout_gravity="center|right" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/design"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/timerValue"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/timerVal"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:gravity="center|center_vertical|center_horizontal" />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/start2"
                    android:text="Start CPR"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:typeface="serif"
                    android:textAllCaps="false"
                    android:textColor="#f2f2f2"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/design"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/timerValue2"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/timerVal"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:gravity="center|center_vertical|center_horizontal" />

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/design3"
                    android:gravity="center|center_vertical|start|center_horizontal"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp">

                    <Button
                        android:id="@+id/startButton2"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/start3"
                        android:text="@string/shock"
                        android:textAlignment="center"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:textAllCaps="false"
                        android:paddingLeft="30dp"
                        android:textColor="#f2f2f2" />
                    <TextView
                        android:id="@+id/counter1"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".40"
                        android:background="@drawable/count3design"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:gravity="center|center_vertical|center_horizontal"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/design"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/timerValue3"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/timerVal"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:gravity="center|center_vertical|center_horizontal" />


                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:background="@drawable/design4"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp">

                    <Button
                        android:id="@+id/startButton3"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/start4"
                        android:text="@string/epinephrine"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:singleLine="false"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:typeface="serif"
                        android:textAllCaps="false"
                        android:paddingLeft="30dp"
                        android:textColor="#f2f2f2" />

                    <TextView
                        android:id="@+id/counter2"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/count4design"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:gravity="center|center_vertical|center_horizontal"
                        android:layout_weight=".40" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="#f2f2f2"
                android:gravity="center|center_vertical|center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/other_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/start5"
                    android:minWidth="400dp"
                    android:text="@string/other_notification"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:typeface="serif"
                    android:textAllCaps="false"
                    android:textColor="#f2f2f2" />

                <Button
                    android:id="@+id/rhythm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/start6"
                    android:minWidth="400dp"
                    android:text="@string/rhythm"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:typeface="serif"
                    android:textAllCaps="false"
                    android:textColor="#f2f2f2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="#F2f2f2"
                android:gravity="center|center_vertical|center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/event"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/start7"
                    android:minWidth="400dp"
                    android:text="@string/event"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:typeface="serif"
                    android:textAllCaps="false"
                    android:textColor="#f2f2f2" />

                <Button
                    android:id="@+id/Rosc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/start8"
                    android:minWidth="400dp"
                    android:text="@string/ROSC"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:typeface="serif"
                    android:textAllCaps="false"
                    android:textColor="#f2f2f2" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:background="@drawable/design"
        android:orientation="vertical">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:text="Activitiy Log"
            android:textAlignment="center"

            android:background="#bdbdbd"
            android:gravity="center|center_vertical|center_horizontal"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <ListView
            android:id="@+id/Loglist"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:dividerHeight="1dp"
            android:scrollbars="vertical"
            android:background="#f2f2f2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

        </ListView>

    </LinearLayout>


</LinearLayout>